Plugged authorization into routes. Automate swagger build.
