# routes/reviews.js
@@ -1,8 +1,10 @@
 const router = require('express').Router();
 const authenticationRouter = require('./authentication.js');
 const reviewsController = require('../controllers/reviews.js');
+const authentication = require('../authentication');
 
-//router.use('/authentication', authenticationRouter);
+/* Authorize for this route */
+router.use(authentication.isAuthenticated);
 
 /* get Routes */
 router.get('/', reviewsController.getAll);
